# Emergenta

./: .gitignore  Makefile  README-EN.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: test.yml
data/exports/: extreme_scenarios_report.md
docs/: 公众号文章-Emergenta技术详解.md
docs/research_notes/: dutch_disease_5000_v2_analysis.md
scripts/: benchmark_scale.py  run_apocalypse_5000.py  run_dashboard.py  run_dutch_disease_5000.py  run_extreme_scenarios.py  run_info_cocoon_5000.py  run_phase3_sim.py  run_simulation.py  scenario_utils.py
src/civsim/: config.py  config_params.py  config_params_ext.py
tests/: conftest.py
tests/e2e/: test_parallel_simulation.py  test_param_dashboard.py  test_phase1_basic_sim.py  test_phase2_llm_agents.py  test_phase3_emergence.py  test_phase4_scaling.py  test_phase5_dashboard.py  test_stress.py
tests/integration/: test_civilian_settlement.py  test_feedback_loops.py  test_governor_civilian.py  test_leader_governor.py  test_llm_optimization.py  test_migration_repopulation.py  test_parallel_execution.py
tests/unit/: test_adaptive.py  test_analytics.py  test_benchmark.py  test_cascade.py  test_civilian.py  test_clock.py  test_communication.py  test_config.py  test_coordinator.py  test_cost_tracker.py  test_diplomacy.py  test_gateway.py  test_governor.py  test_granovetter.py  test_leader.py  test_llm_speeches.py  test_map_generator.py  test_markov.py  test_memory.py  test_migration.py  test_param_registry.py  test_profiler.py  test_prompt_cache.py  test_recovery.py  test_resources.py  test_revolution.py  test_tiles.py  (+4 more)
(+61 files in other folders)
